<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/postnew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_new_update"
            android:layout_gravity="center"
            tools:textSize="30sp" />

        <EditText
            android:id="@+id/posttitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/title"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/postdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/description"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/postbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_gravity="center" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>